# streamlib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  RELEASE.md  RELEASE_SETUP.md  TODO.md  VALGRIND_REPORT.md  each_file.c  each_file.h  file_stream.c  file_stream.h  mem_stream.c  mem_stream.h  stream.c  stream.h  stream_base.c  stream_base.h  streamlib.sublime-project  test_vgz.sh  vcpkg.json  zip_file_stream.c  zip_file_stream.h
.claude/: project.json
.github/: CI_BADGE.md  CI_SETUP.md
.github/workflows/: build-and-tests.yml  c-cpp.yml  ci.yml  linux.yml  macos.yml  msys2-mingw64.yml  release.yml
docs/: DEVELOPMENT.md  SPEC.md
examples/: CMakeLists.txt  binary_writer.c  compress_text.c  create_archive.c  large_file_mmap.c  list_archive.c  midi_generator.c  read_file.c  read_gzip.c  test_mmap_emulation.c  vgz_analyzer.c  walk_tree.c  write_compressed.c
include/: config.h.in  stream.h  stream_config.h.in
scripts/: README.md  release.sh  test-ci-local.sh
src/: archive_stream.c  compression_stream.c  file_stream.c  mem_stream.c  stream.c  walker.c
tests/: CMakeLists.txt  each_file.c  stream.c  test_archive.c  test_basic.c  test_compression.c  test_walker.c  test_zip_file_stream_gz_mmap  test_zip_file_stream_gz_mmap.c  test_zip_file_stream_mmap  test_zip_file_stream_mmap.c
